# hugin-mobile

./: README.md  kuntu.jks  settings.gradle
app/: build.gradle
app/release/: output-metadata.json
app/src/androidTest/java/com/example/phonestitch/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/phonestitch/: MainActivity.kt
app/src/main/java/com/example/phonestitch/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/phonestitch/: ExampleUnitTest.kt
stitchlib/: CMakeLists.txt  build.gradle
stitchlib/src/androidTest/java/com/stitch/stitchlib/: ExampleInstrumentedTest.java
stitchlib/src/main/cpp/: stitchlib.cpp
stitchlib/src/main/cpp/include/: imageCTR.h  ktstich.h  multiblend.h
stitchlib/src/main/cpp/include/mb/: aligned_ptr.h  file.h  flex.h  functions.h  image.h  jpeg.h  linux_overrides.h  logging.h  mapalloc.h  multiblend.h  pnger.h  pyramid.h  threadpool.h  tiff.h
stitchlib/src/main/java/com/stitch/stitchlib/: NativeLib.java
stitchlib/src/test/java/com/stitch/stitchlib/: ExampleUnitTest.java
